[edit] some katas

--- a/kata_8/the_feast_of_many_beasts/description
+++ b/kata_8/the_feast_of_many_beasts/description
@@ -1,2 +1,2 @@
 Не работает с русским алфавитом, например, "ж" и "о" имеют одинаковое значение 208 при типе rune,
-необходимо использовать utf decode. Задача принимается сервисом для английского алфавита
+необходимо использовать utf decode. Задача принимается сервисом, если рассмотреть случаи только английского алфавита.
