[edit] some katas

--- a/kata_6/prime_factors/description
+++ b/kata_6/prime_factors/description
@@ -1,3 +1,4 @@
 Появляются проблемы на границе int (int32), сразу после входа в цикл необходимо проверить, является ли число простым.
-В этом помогает пакет "math/big". Метод big.NewInt(int64(n))ProbablyPrime(0) прекрасно справляется с этим.
+В этом помогает пакет "math/big". Метод big.NewInt(int64(n)).ProbablyPrime(0) прекрасно справляется с этим.
 Без использования вышеуказанного пакета сервис задачу не принимает, т.к. превышается лимит времени ( 12 сек ).
+P.S.: есть более быстрый способ проверить, является ли число простым, см. функцию IsPrime в пакете dominant_primes.
